--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,6 +1,11 @@
 extends ../../layouts/default.pug 
 
 block main 
+    - if (messages.sucess)
+      .message.info
+        .alert.alert-secondary(role='alert' style='background-color:  rgb(112, 193, 112); ' time-out-alert)
+            | #{messages.sucess} 
+            button.btn-close(type='button', aria-label='Close' btn-close-alert) X
     .container.mt-4
       h3 Bộ Lọc
       .btn-group
