--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -46,7 +46,7 @@ block main
         .col
           Button.btn.btn-primary Thông báo 
         .col
-          a(href="").btn.btn-warning + Thêm mới  
+          a(href="/admin/products/create").btn.btn-warning + Thêm mới  
         .col
           a(href="/admin/products/garbage").btn.btn-primary.position-relative
             | Thùng rác
