implement preview an image before it is uploadted

--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -21,8 +21,8 @@ block main
           input#productStock.form-control(type='number', name='stock', placeholder='Enter stock')
         .form-group
           label(for='productThumbnail') Thumbnail URL
-          input#productThumbnail.form-control(type='file', name='thumbnail', placeholder='Enter thumbnail URL', accept='image/*')
-          img(src='asd', alt='', style='width: 100px;')
+          input#productThumbnail.form-control(type='file', name='thumbnail', placeholder='Enter thumbnail URL', accept='image/*', inp-review)
+          img(src='', alt='', style='width: 80px; height: 100px;', img-review)
         .form-group
           label Status
           br
