tiny mce integration

--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -15,4 +15,7 @@ html(lang="en")
 
 
     script(src="/admin/js/script.js") 
+    script(type='application/javascript', src='/tinymce/tinymce.min.js')
+    // Script element sourcing the TinyMCE configuration
+    script(type='application/javascript', src='/admin/js/my-tinymce-config.js')
     
