implement change position and delete multi products

--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -108,7 +108,7 @@ block main
                 td 
                   Button.badge.rounded-pill.text-bg-danger(style='background-color: red; color: white' btn-change-status=item.id) #{item.status}
               td 
-                input(type="number", style="width: 40px;", value=item.position) 
+                input(type="number", style="width: 40px;", value=item.position, name='position') 
               td 
                 .btn-group
                   button.btn.btn-danger Sửa
