Configure the page on the client side

--- a/views/clients/layouts/default.pug
+++ b/views/clients/layouts/default.pug
@@ -12,4 +12,5 @@ html(lang="en")
 
     include ../partials/footer.pug 
 
-    link(rel="stylesheet", href="/js/script.js")
+
+    script(rel="stylesheet", src="/js/script.js")
