--- a/views/clients/pages/products/index.pug
+++ b/views/clients/pages/products/index.pug
@@ -1,4 +1,32 @@
 extends ../../layouts/default.pug 
 
 block main 
-    h1 Day la trang products 
+    .container(style='margin-top: 30px')
+      .row
+       each item in product  
+        .col-md-4
+          .card.product-card.mb-4
+            img.card-img-top.product-img(src=item.thumbnail, alt='Product Image' style='height: 350px')
+            .card-body
+              h5.card-title #{item.title}
+              p.card-text Price: $#{item.price}
+              p.card-text Old Price: 30
+              a.btn.btn-primary(href='#') Add to Category
+    if pagination.currentPage === 1
+        .container
+            .btn-view-more
+                a.btn.btn-secondary(btn-see-more) Xem th&ecirc;m 
+    else 
+        .container 
+          .btn-view-more
+            ul.pagination
+                li.page-item
+                  if pagination.currentPage > 1
+                    a.page-link(href='#' btn-pagination=pagination.currentPage -1 ) <--
+                - for(let i = 1; i <= pagination.total; i++)
+                    li.page-item
+                        a.btn(href='#' class=`${pagination.currentPage == i ? "btn-primary": ""}` btn-pagination=i) #{i}
+                  
+                li.page-item
+                  if pagination.currentPage < pagination.total
+                    a.page-link(href='#' btn-pagination=pagination.currentPage + 1) -->
