--- a/views/admin/pages/product-category/create.pug
+++ b/views/admin/pages/product-category/create.pug
@@ -25,7 +25,7 @@ block main
           img(src="", alt="" upload-img-preview style="width: 50px; height: 50px;") 
         .form-group
           label(for='position') Position:
-          input#position.form-control(type='number', name='position', required='')
+          input#position.form-control(type='number', name='position')
         .form-group
           label Status:
           br
