--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -3,8 +3,10 @@
         li.nav-item
           a.nav-link.active(href='#') Dashboard
         li.nav-item
-          a.nav-link(href='#') Users
+          a.nav-link(href='/admin/users') Users
         li.nav-item
-          a.nav-link(href='#') Products
+          a.nav-link(href='/admin/products') Products
         li.nav-item
-          a.nav-link(href='#') Categories
+          a.nav-link(href='/admin/product-category') Categories
+        li.nav-item
+          a.nav-link(href='/admin/roles') Role
