--- a/views/clients/pages/products/index.pug
+++ b/views/clients/pages/products/index.pug
@@ -1,6 +1,24 @@
 extends ../../layouts/default.pug 
 
 block main 
+    .container.mt-5
+      .row.justify-content-center
+        .col-md-6 
+          h3 Sắp xếp theo 
+          .btn-group(role='group', aria-label='Basic mixed styles example')
+            button.btn.btn-outline-warning(type='button' btn-sorted="price-desc") Cao Đến thấp 
+            button.btn.btn-outline-warning(type='button' btn-sorted="price-asc") Thấp đến cao 
+            button.btn.btn-outline-warning(type='button' btn-sorted="discountPercentage-desc") Giảm giá nhiều nhất
+            button.btn.btn-outline-warning(type='button' btn-sorted="view-desc") Xem nhiều nhất 
+    .container.mt-5 
+      .row.justify-content-center
+        .col-md-6 
+          h2 Tìm kiếm 
+          form.form-inline
+            .input-group
+              input.form-control(type='text', placeholder='Search', aria-label='Search', aria-describedby='search-btn', name='keyword')
+              .input-group-append
+                button#search-btn.btn.btn-outline-secondary(type='button') Tìm kiếm 
     .container(style='margin-top: 30px')
       .row
        each item in product  
