--- a/views/clients/partials/header.pug
+++ b/views/clients/partials/header.pug
@@ -6,17 +6,13 @@ header.p-3.bg-dark.text-white
               use(xlink:href='#bootstrap')
           ul.nav.col-12.col-lg-auto.me-lg-auto.mb-2.justify-content-center.mb-md-0
             li
-              a.nav-link.px-2.text-secondary(href='#') Home
+              a.nav-link.px-2.text-secondary(href='/') Trang chủ 
             li
-              a.nav-link.px-2.text-white(href='#') Features
+              a.nav-link.px-2.text-white(href='/About') Về chúng tôi 
             li
-              a.nav-link.px-2.text-white(href='#') Pricing
+              a.nav-link.px-2.text-white(href='/products') Sản phẩm 
             li
               a.nav-link.px-2.text-white(href='#') FAQs
-            li
-              a.nav-link.px-2.text-white(href='#') About
-          form.col-12.col-lg-auto.mb-3.mb-lg-0.me-lg-3
-            input.form-control.form-control-dark(type='search', placeholder='Search...', aria-label='Search')
           .text-end
             button.btn.btn-outline-light.me-2(type='button') Login
             button.btn.btn-warning(type='button') Sign-up
