config accounts pages

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -12,3 +12,5 @@
           a.nav-link(href='/admin/roles') Role
         li.nav-item
           a.nav-link(href='/admin/roles/permissions') Phân quyền 
+        li.nav-item
+          a.nav-link(href='/admin/accounts') Tài khoản  
