--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -11,6 +11,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
           li.nav-item
             a.nav-link(href='#') Dashboard
           li.nav-item
-            a.nav-link(href='#') Settings
+            a.nav-link(href='/admin/auth/logout') Logout 
           li.nav-item
-            a.nav-link(href='#') Logout
+            a.nav-link(href='/admin/auth/login') Login
